tests/neg-custom-args/captures/outer-var.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:11:8 -------------------------------------
11 |    x = q           // error
   |        ^
   |        Found:    box () ->{q} Unit
   |        Required: box () ->{p, q²} Unit
   |
   |        where:    q  is a parameter in method inner
   |                  q² is a parameter in method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:12:9 -------------------------------------
12 |    x = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    Proc
   |         Required: box () ->{p, q} Unit
   |
   |         Note that () => Unit cannot be box-converted to box () ->{p, q} Unit
   |         since at least one of their capture sets contains the root capability `cap`
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:13:9 -------------------------------------
13 |    y = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    Proc
   |         Required: box () ->{p} Unit
   |
   |         Note that the universal capability `cap`
   |         cannot be included in capture set {p} of variable y
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:14:8 -------------------------------------
14 |    y = q           // error
   |        ^
   |        Found:    box () ->{q} Unit
   |        Required: box () ->{p} Unit
   |
   |        Note that reference (q : Proc), defined in method inner
   |        cannot be included in outer capture set {p} of variable y
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:16:65 ------------------------------------
16 |  var finalizeActions = collection.mutable.ListBuffer[() => Unit]() // error
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                        Found:    scala.collection.mutable.ListBuffer[box () => Unit]
   |                        Required: box scala.collection.mutable.ListBuffer[box () ->? Unit]^?
   |
   |                        Note that the universal capability `cap`
   |                        cannot be included in capture set ? of variable finalizeActions
   |
   | longer explanation available when compiling with `-explain`
